fixed blockquotes in dark mode

--- a/_sass/jekyll-theme-cs50.scss
+++ b/_sass/jekyll-theme-cs50.scss
@@ -97,7 +97,7 @@ a[data-local] {
 
 // A la GitHub
 blockquote {
-    border-left-color: $gray-200;
+    border-left-color: $text-muted;
     border-left-style: solid;
     border-left-width: thick;
     color: $text-muted;
